--- a/nfthub/src/components/MintNft/MintNft.css
+++ b/nfthub/src/components/MintNft/MintNft.css
@@ -1,6 +1,9 @@
+.MintDiv{
+  width: 50%;
+}
+
 @media only screen and (max-width: 768px) {
-  /* For mobile phones: */
-  [class*="col-"] {
-    width: 100%;
+   .MintDiv{
+    width: 90%;
   }
 }
