--- a/nfthub/src/App.css
+++ b/nfthub/src/App.css
@@ -1,13 +1,14 @@
 
 
 html{
-  /* background:url('../public/assets/background-sober.jpg') no-repeat center center fixed;
+  background:url('../public/assets/background-sober.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover; */
-  background: rgb(2,0,36);
-  background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%,rgba(0,212,255,1) 100%);
+  background-size: cover;
+  /* background: rgb(2,0,36); */
+  /* background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%,rgba(0,212,255,1) 100%); */
+
 /*   filter: blur(8px); */
 /*   -webkit-filter: blur(8px); */
 }
