--- a/nfthub/src/components/MarketPlace/MarketPlace.css
+++ b/nfthub/src/components/MarketPlace/MarketPlace.css
@@ -10,6 +10,10 @@
   background: transparent;
 }
 
+.card:hover{
+  border-color: rgb(13, 110, 253);
+  box-shadow: 0px 2px 20px 2px rgb(13, 110, 253);
+}
 .card-text {
   font-size: 14px;
 }
