changes UI of form & BG & card of NFT Some other minor changes

--- a/nfthub/src/App.css
+++ b/nfthub/src/App.css
@@ -1,6 +1,7 @@
 
 html{
-  background:url('../public/assets/background-sober.jpg') no-repeat center center fixed;
+  /* background:url('../public/assets/background-sober.jpg') no-repeat center center fixed; */
+  background:url('../public/assets/giphy.gif') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
