--- a/nfthub/src/components/NavBar/NavBar.css
+++ b/nfthub/src/components/NavBar/NavBar.css
@@ -41,6 +41,6 @@
 
 .btn-danger{
   /* background-color: rgb(230, 66, 66); */
-  background-color: #046a7a!important;
+  background-color: #fe7886!important;
 }
 
