--- a/nfthub/src/components/MarketPlace/MarketPlace.css
+++ b/nfthub/src/components/MarketPlace/MarketPlace.css
@@ -57,3 +57,119 @@
 .nftPageImg{
   height: 400px;
 }
+
+.nft{
+  user-select:none;
+  max-width: 300px;
+  margin: 1rem auto;
+  border: 1px solid #ffffff22 !important;
+  background-color: #282c34!important;
+  background: linear-gradient(0deg, rgba(40,44,52,1) 0%, rgba(17,0,32,.5) 100%)!important;
+  box-shadow: 0 7px 20px 5px #00000088!important;
+  border-radius: .7rem;
+  backdrop-filter: blur(7px);
+  -webkit-backdrop-filter: blur(7px);
+  overflow: hidden;
+  transition: .5s all;
+}
+
+.nft hr{
+  width: 100%;
+  border: none;
+  border-bottom: 1px solid #88888855!important;
+  margin-top: 0;
+}
+
+.nft ins{
+  text-decoration: none;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  color: #fff;
+  width: 100%;
+}
+
+.main .tokenImage{
+  border-radius: .5rem;
+  max-width: 100%;
+  height: 250px;
+  object-fit: cover;
+}
+
+.main .tokenInfo{
+  display: flex;
+      justify-content: space-between;
+      align-items: center;
+}
+
+.price{
+  display: flex;
+        align-items: center;
+        color: #ee83e5;
+        font-weight: 700;
+}
+
+
+.main .tokenInfo .price ins{
+  margin-left: -.3rem;
+  margin-right: .5rem;
+}
+
+.main .creator{
+  display: flex;
+  align-items: center;
+  margin-top: .2rem;
+  margin-bottom: -.3rem;
+}
+
+.main .creator ins{
+  color: #a89ec9;
+  text-decoration: none;
+}
+
+.main .creator .wrapper{
+  display: flex;
+  align-items: center;
+  border: 1px solid #ffffff22!important;
+  padding: .3rem;
+  margin: 0;
+  margin-right: .5rem;
+  border-radius: 100%;
+  box-shadow: inset 0 0 0 4px #000000aa!important;
+}
+
+.main .creator .wrapper img{
+  border-radius: 100%;
+  border: 1px solid #ffffff22!important;
+  width: 2rem;
+  height: 2rem;
+  object-fit: cover;
+  margin: 0;
+}
+
+.main::before{
+  position: fixed;
+  content: "";
+  box-shadow: 0 0 100px 40px #ffffffde!important;
+  top: -10%;
+  left: -100%;
+  transform: rotate(-45deg);
+  height: 60rem;
+  transition: .7s all;
+}
+
+.main::before:hover{
+  border: 1px solid #fffefe44!important;
+  box-shadow: 0 7px 50px 10px #000000aa!important;
+  transform: scale(1.015);
+  filter: brightness(1.3);
+}
+
+.main:hover::before{
+  filter: brightness(.5);
+  top: -100%;
+  left: 200%;
+}
