--- a/blockverse/src/App.css
+++ b/blockverse/src/App.css
@@ -1,6 +1,5 @@
-
-html{
-  background:url('../public/assets/background-sober.jpg') no-repeat center center fixed;
+html {
+  background: url('../public/assets/background-sober.jpg') no-repeat center center fixed;
   /* background:url('../public/assets/giphy.gif') no-repeat center center fixed; */
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -9,18 +8,51 @@ html{
   /* background: rgb(2,0,36); */
   /* background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%,rgba(0,212,255,1) 100%); */
 
-/*   filter: blur(8px); */
-/*   -webkit-filter: blur(8px); */
+  /*   filter: blur(8px); */
+  /*   -webkit-filter: blur(8px); */
 }
 
-.App{
+.App {
   background: none;
 }
 
-input::placeholder{
-  color: white!important;
+input::placeholder {
+  color: white !important;
 }
 
-.text-muted{
-  color:#424242!important;
+.text-muted {
+  color: #424242 !important;
+}
+
+
+/* Themes */
+
+/* Styles for light theme */
+.lightTheme {
+  --background-color: #fff;
+  --text-color: #333;
+  /* --background: url('../public/assets/lightbg.jpg') no-repeat center center fixed;
+  background: var(--background);
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: 100%; */
+  background-color: var(--background-color);
+  color: var(--text-color);
+}
+.lightThemeInput, .lightThemeInput:focus {
+  border: #424242 1px solid;
+  background-color: rgb(196, 196, 196);
+  color: black;
+}
+/* .lightThemeInput::placeholder {
+  text-decoration: rgb(206, 14, 14);
+} */
+
+/* Styles for dark theme */
+.darkTheme {
+  /* --background-color: #333; */
+  --text-color: #fff;
+  /* background-color: var(--background-color); */
+  color: var(--text-color);
 }
